<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5B5B5"
    android:orientation="vertical"
    android:padding="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbarTrackHorizontal="@drawable/ic_menu_camera">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="Item Name"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/itemNameInput"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:background="#C3F4EAEA" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="Model"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/itemModelInput"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:background="#C3F4EAEA" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="Make"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/itemMakeInput"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:background="#C3F4EAEA" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="Date"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/input_year"
                    android:layout_width="147dp"
                    android:layout_height="wrap_content"
                    android:background="#C3F4EAEA"
                    android:gravity="center"
                    android:hint="YYYY"
                    android:inputType="number"
                    android:maxLength="4"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/input_slash_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:textSize="25dp"/>

                <EditText
                    android:id="@+id/input_month"
                    android:layout_width="86dp"
                    android:layout_height="wrap_content"
                    android:background="#C3F4EAEA"
                    android:gravity="center"
                    android:hint="MM"
                    android:inputType="number"
                    android:maxLength="2"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/input_slash_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:textSize="25dp"/>

                <EditText
                    android:id="@+id/input_day"
                    android:layout_width="62dp"
                    android:layout_height="wrap_content"
                    android:background="#C3F4EAEA"
                    android:gravity="center"
                    android:hint="DD"
                    android:inputType="number"
                    android:maxLength="2"
                    android:textSize="20sp"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="Serial Number"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/serialNumberInput"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:background="#C3F4EAEA" />

                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_width="56dp"
                    android:layout_height="match_parent"
                    android:background="#E5B5B5"
                    app:srcCompat="@drawable/ic_menu_camera" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="Estimate Value"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/estimatedValueInput"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:background="#C3F4EAEA"
                android:inputType="numberDecimal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="Description"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/descriptionInput"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:background="#C3F4EAEA"
                android:inputType="textMultiLine" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="Comment"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/commentInput"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:background="#C3F4EAEA"
                android:inputType="textMultiLine" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="Item Tag"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/itemTagInput"
                    android:layout_width="0dp"
                    android:layout_height="36dp"
                    android:layout_weight="1"
                    android:background="#C3F4EAEA"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/addtagbutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Add Tag" />

            </LinearLayout>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipgroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <!-- Chips can be dynamically added here -->
            </com.google.android.material.chip.ChipGroup>

            <Button
                android:id="@+id/imageButton"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="#FFD700"
                android:text="Images" />

            <Button
                android:id="@+id/confirmButton"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#ADD8E6"
                android:layout_marginBottom="5dp"
                android:layout_gravity="center"
                android:text="Confirm" />

            <Button
                android:id="@+id/deleteButton"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="#FF0000"
                android:layout_marginBottom="5dp"
                android:text="Delete" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
